# cargo_auto_github_lib

./: .gitignore  Cargo.toml  README.md  RELEASES.md  temp4.txt
automation_tasks_rs/: .file_hashes.json  .gitignore  .old_metadata.json  Cargo.toml
automation_tasks_rs/src/: github_mod.rs  main.rs  secrets_always_local_mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  tidy_warnings.txt
docs/cargo_auto_github_lib/: all.html  fn.auto_github_create_new_release.html  fn.auto_github_upload_asset_to_release.html  fn.description_and_topics_to_github.html  fn.git_has_remote.html  fn.git_has_upstream.html  fn.github_api_create_a_github_pages_site.html  fn.github_api_create_new_release.html  fn.github_api_get_authenticated_user.html  fn.github_api_get_organization.html  fn.github_api_get_repository.html  fn.github_api_replace_all_topics.html  fn.github_api_repository_new.html  fn.github_api_update_description.html  fn.github_api_upload_asset_to_release.html  fn.github_create_new_release.html  fn.github_owner.html  fn.github_upload_asset_to_release.html  fn.new_remote_github_repository.html  index.html  sidebar-items.js  trait.SendToGitHubApi.html
docs/cargo_auto_github_lib/auto_github_api_mod/: fn.description_and_topics_to_github.html  fn.git_has_remote.html  fn.git_has_upstream.html  fn.github_api_create_a_github_pages_site.html  fn.github_api_create_new_release.html  fn.github_api_get_authenticated_user.html  fn.github_api_get_organization.html  fn.github_api_get_repository.html  fn.github_api_organization_repository_new.html  fn.github_api_replace_all_topics.html  fn.github_api_repository_new.html  fn.github_api_update_description.html  fn.github_api_upload_asset_to_release.html  fn.github_api_user_repository_new.html  fn.new_remote_github_repository.html  index.html  sidebar-items.js  trait.SendToGitHubApi.html
docs/cargo_auto_github_lib/auto_github_mod/: fn.__stability.html  fn.__static_ref_initialize.html  fn.auto_github_create_new_release.html  fn.auto_github_upload_asset_to_release.html  fn.github_create_new_release.html  fn.github_owner.html  fn.github_upload_asset_to_release.html  index.html  sidebar-items.js  static.LAZY.html  struct.CARGO_TOML.html  struct.PACKAGE.html
docs/cargo_auto_github_lib/utils_mod/: index.html
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/ops/deref/: trait.Deref.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/search.desc/cargo_auto_github_lib/: cargo_auto_github_lib-desc-0-.js
docs/src/cargo_auto_github_lib/: auto_github_api_mod.rs.html  auto_github_mod.rs.html  lib.rs.html  utils_mod.rs.html
src/: auto_github_api_mod.rs  auto_github_mod.rs  lib.rs  utils_mod.rs
tests/: integration_test.rs
