[package]
name = "cargo_auto_github_lib"
version = "1.1.4"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Library for cargo-auto `automation tasks written in rust language` with functions for GitHub."
repository = "https://github.com/automation-tasks-rs/cargo_auto_github_lib"
readme = "README.md"
license = "MIT"
keywords = ["maintained","ready-for-use", "rust","cargo-auto"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
cargo_auto_lib = "2.3.8"
##### cargo_auto_lib = {path="../cargo_auto_lib"}

reqwest = { version = "0.12.3", features = ["blocking", "stream"] }
tokio-util = {version = "0.7.8", features = ["codec"]}
tokio = {version = "1.28.2", features = ["rt","rt-multi-thread","fs"]}
url="2.3.1"
json="0.12.4"
serde="1.0.198"
serde_json = {version= "1.0.114", features=["std"]}
inquire = "0.7.0"
camino = "1.1.6"
