[package]
name = "cargo_auto_github_lib"
# SemVer rules for libraries:
# increment MAJOR version when you make breaking changes (incompatible API changes)
# increment MINOR version when you add functionality (that are backward compatible)
# increment PATCH version when you make bug fixes (that are backward compatible)
# PATCH version MUST be reset to 0 when MINOR version is incremented.
# PATCH and MINOR versions MUST be reset to 0 when MAJOR version is incremented.
version = "1.1.8"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Library for cargo-auto `automation tasks written in rust language` with functions for GitHub."
repository = "https://github.com/automation-tasks-rs/cargo_auto_github_lib"
readme = "README.md"
license = "MIT"
keywords = ["maintained","ready-for-use", "rust","cargo-auto"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependecies in Cargo.toml look like a specific version of the crate, they are just like a carret version "^x.y.z" and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
cargo_auto_lib = {version="2.4.3", path="../cargo_auto_lib"}

reqwest = { version = "0.12.3", features = ["blocking", "stream"] }
tokio-util = {version = "0.7.8", features = ["codec"]}
tokio = {version = "1.28.2", features = ["rt","rt-multi-thread","fs"]}
url="2.3.1"
json="0.12.4"
serde="1.0.198"
serde_json = {version= "1.0.114", features=["std"]}
inquire = "0.7.0"
camino = "1.1.6"
